[ATK] Do not expose '\n' for wrapped lines with ATK_TEXT_BOUNDARY_CHAR https://bugs.webkit.org/show_bug.cgi?id=118359

Reviewed by Carlos Garcia Campos.

Source/WebCore:

Do not expose a '\n' character for every visual line break.

* accessibility/atk/WebKitAccessibleInterfaceText.cpp:
(webkitAccessibleTextGetChar): Removed wrong code.

Source/WebKit/gtk:

Added new unit test to make sure we exposed line breaks properly.

* tests/testatk.c:
(testWebkitAtkGetTextAtOffsetWithWrappedLines): New unit test.
(main): Added new test to the test suite.

Canonical link: https://commits.webkit.org/136390@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152396 268f45cc-cd09-0410-ab3c-d52691b4dbfc